Layout changes (Spacing on Homescreen, Title register), safetypage fix

--- a/src/NBG.Visitor.Blazor/Components/TerminalSafety.razor.css
+++ b/src/NBG.Visitor.Blazor/Components/TerminalSafety.razor.css
@@ -7,3 +7,7 @@
     background-color: #F00C;
     padding: 2em;
 }
+
+.spacer {
+    height: 8em;
+}
